# serializer version: 1
# name: test_node_prop[filter-node][__repr__]
  "FilterNode(kwargs=FrozenDict({'w': '1920', 'h': '1080', 'true': True, 'false': False}), inputs=(), name='scale', input_typings=(), output_typings=())"
# ---
# name: test_node_prop[filter-node][f.repr]
  'scale'
# ---
# name: test_node_prop[filter-node][get_args]
  list([
    '',
    'scale=',
    'w=1920:h=1080:true=1:false=0',
    '',
  ])
# ---
# name: test_node_prop[global-node][__repr__]
  "GlobalNode(kwargs=FrozenDict({'y': True, 'no': False, 'speed': 1}), inputs=(OutputStream(node=OutputNode(kwargs=FrozenDict({}), inputs=(AVStream(node=InputNode(kwargs=FrozenDict({}), inputs=(), filename='tmp.mp4'), index=None),), filename='temp'), index=None),))"
# ---
# name: test_node_prop[global-node][f.repr]
  '-y -nono -speed 1'
# ---
# name: test_node_prop[global-node][get_args]
  list([
    '-y',
    '-nono',
    '-speed',
    '1',
  ])
# ---
# name: test_node_prop[input-node][__repr__]
  "InputNode(kwargs=FrozenDict({'f': 'mp4'}), inputs=(), filename='test.mp4')"
# ---
# name: test_node_prop[input-node][f.repr]
  'test.mp4'
# ---
# name: test_node_prop[input-node][get_args]
  list([
    '-f',
    'mp4',
    '-i',
    'test.mp4',
  ])
# ---
# name: test_node_prop[merge-output-node][__repr__]
  "GlobalNode(kwargs=FrozenDict({}), inputs=(OutputStream(node=OutputNode(kwargs=FrozenDict({}), inputs=(AVStream(node=InputNode(kwargs=FrozenDict({}), inputs=(), filename='tmp1.mp4'), index=None),), filename='out1.mp4'), index=None), OutputStream(node=OutputNode(kwargs=FrozenDict({}), inputs=(AVStream(node=InputNode(kwargs=FrozenDict({}), inputs=(), filename='tmp2.mp4'), index=None),), filename='out2.mp4'), index=None)))"
# ---
# name: test_node_prop[merge-output-node][f.repr]
  ''
# ---
# name: test_node_prop[merge-output-node][get_args]
  list([
  ])
# ---
# name: test_node_prop[output-node][__repr__]
  "OutputNode(kwargs=FrozenDict({'bufsize': '64k'}), inputs=(), filename='test.mp4')"
# ---
# name: test_node_prop[output-node][f.repr]
  'test.mp4'
# ---
# name: test_node_prop[output-node][get_args]
  list([
    '-bufsize',
    '64k',
    'test.mp4',
  ])
# ---
# name: test_nostdin
  list([
    'ffmpeg',
    '-nostdin',
    '-i',
    'tmp1.mp4',
    'output.mp4',
  ])
# ---
